--- a/hangman game/assets/css/style.css
+++ b/hangman game/assets/css/style.css
@@ -37,7 +37,7 @@ body{
     height: auto;
 }
 
-.pSecreta {
+.palavraSecreta {
     display: flex;
     flex-direction: row;
     justify-content: center;
