--- a/hangman game/assets/css/style.css
+++ b/hangman game/assets/css/style.css
@@ -10,15 +10,15 @@
     --verde: rgb(108, 233, 67);
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: var(--font);
+    overflow: hidden;
 }
 
-body{
+body {
     background: linear-gradient(90deg, var(--cinza), var(--preto), var(--cinza));
-    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -28,16 +28,18 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
 }
 
-#imgforca {
-    margin: 10px 0;
-    width: 250px;
-    height: auto;
+#imagemForca {
+    background-image: url("/assets/img/forca.png");
+    background-repeat: no-repeat;
+    width: 270px;
+    height: 270px;
+    margin-top: 1rem;
 }
 
 .palavraSecreta {
+    margin-top: 50px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -50,7 +52,12 @@ body{
 }
 
 .categoria {
-    margin: 18px 0;
+    margin-top: 20px;
+}
+
+.teclado {
+    padding-bottom: 100px;
+    margin-top: 40px;
 }
 
 .teclas {
@@ -59,7 +66,7 @@ body{
     justify-content: center;
 }
 
-.teclas button{
+.teclas button {
     margin: 5px 3px;
     font-size: 20px;
     width: 40px;
@@ -85,4 +92,3 @@ body{
     font-size: 1.8rem;
     font-weight: var(--fontp4);
 }
-
