--- a/hangman game/assets/css/style.css
+++ b/hangman game/assets/css/style.css
@@ -6,6 +6,7 @@
     --fontp6: 600;
     --preto: #000;
     --cinza: #878787;
+    --cinzafechado: #373737;
     --branco: #fff;
     --verde: #6ce943;
 }
@@ -15,6 +16,7 @@
     padding: 0;
     font-family: var(--font);
     overflow: hidden;
+    text-decoration: none !important;
 }
 
 body {
@@ -80,21 +82,14 @@ body {
     border: 2px solid var(--verde);
     background-color: var(--preto);
     color: var(--branco);
+    cursor: pointer;
 }
 
-.fonte6 {
-    color: var(--branco);
-    font-size: 2.3rem;
-    font-weight: var(--fontp6);
+.teclas button:disabled {
+    cursor: not-allowed;
 }
 
-.fonte4 {
-    color: var(--verde);
-    font-size: 1.8rem;
-    font-weight: var(--fontp4);
-}
-
-#reiniciar {
+#btnReiniciar {
     margin: 5px 3px;
     font-size: 20px;
     width: 40px;
@@ -109,3 +104,50 @@ body {
     color: var(--branco);
 }
 
+.modal {
+    background: var(--preto);
+}
+
+.stylemodal {
+    background-color: var(--cinza);
+    color: var(--preto);
+    font-weight: 600;
+    text-align: center;  
+    border: 1.5px solid var(--verde) !important;  
+}
+
+.btn {
+    background: var(--cinzafechado);
+    color: var(--branco);
+    border-bottom: 3px solid var(--verde) !important;
+}
+
+.btn:hover {
+    background: transparent;
+    color: var(--preto);
+    border-bottom: 3px solid var(--verde) !important;
+    font-weight: 600;
+}
+
+.btn a{
+    background: var(--cinzafechado);
+    color: var(--branco);
+}
+
+.btn a:hover {
+    background: transparent;
+    color: var(--preto);
+    font-weight: 600;
+}
+
+.fonte6 {
+    color: var(--branco);
+    font-size: 2.3rem;
+    font-weight: var(--fontp6);
+}
+
+.fonte4 {
+    color: var(--verde);
+    font-size: 1.8rem;
+    font-weight: var(--fontp4);
+}
